--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/elements": "^1.3.17",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react": "18.1.0",
+    "react-native": "0.70.8",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.7.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
