--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "expo": "^47.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.7.0",
