--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-speech": "^11.1.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
+    "firebase": "8.2.10",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-dropdown-picker": "^5.4.6",
@@ -32,7 +33,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
