--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "expo": "^47.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
-    "expo-speech": "^11.1.1",
+    "expo-speech": "~11.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
     "firebase": "8.2.10",
